	--- 9.6-ESV-R10-P2 released ---

3693.	[security]	memcpy was incorrectly called with overlapping
			ranges resulting in malformed names being generated
			on some platforms.  This could cause INSIST failures
			when serving NSEC3 signed zones.  [RT #35120]

	--- 9.6-ESV-R10-P1 released ---

3656.	[bug]		Treat an all zero netmask as invalid when generating
			the localnets acl. [RT #34687]

	--- 9.6-ESV-R10 released ---

3638.	[cleanup]	Add the ability to handle ENOPROTOOPT in case it is 
			encountered. [RT #34668]

	--- 9.6-ESV-R10rc2 released ---

3637.	[bug]		'allow-query-on' was checking the source address
			rather than the destination address. [RT #34590]

3636.	[bug]		Automatic empty zones now behave better with
			forward only "zones" beneath them. [RT #34583]

3634.	[func]		Report build-id in rndc status. Report build-id
			when building from a git repository. [RT #20422]

3633.	[cleanup]	Refactor OPT processing in named to make it easier
			to support new EDNS options. [RT #34414]

3631.	[bug]		Remove spurious warning about missing signatures when
			qtype is SIG. [RT #34600]

3630.	[bug]		Ensure correct ID computation for MD5 keys. [RT #33033]

3625.	[bug]		Don't send notify messages to machines outside of the
			test setup.

	--- 9.6-ESV-R10rc1 released ---

3615.	[cleanup]	"configure" now finishes by printing a summary
			of optional BIND features and whether they are
			active or inactive. ("configure --enable-full-report"
			increases the verbosity of the summary.) [RT #31777]

3614.	[port]		Check for <linux/types.h>. [RT #34162]

3611.	[bug]		Improved resistance to a theoretical authentication
			attack based on differential timing.  [RT #33939]

3608.	[port]		win32: added todos.pl script to ensure all text files
			the win32 build depends on are converted to DOS
			newline format. [RT #22067]

	--- 9.6-ESV-R10b1 released ---

3605.	[port]		win32: Addressed several compatibility issues
			with newer versions of Visual Studio. [RT #33916]
